--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -66,7 +66,7 @@
  
  :not(pre) > code[class*='language-'],
  pre[class*='language-'] {
-   background: #242323;
+   background: #2B2B2B;
  }
  
  /* Inline code */
