feat: TOC 기능 구현 (#6)

--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -207,6 +207,7 @@ $content-image-max-height: 560px;
 .markdown h6 {
   margin-top: 0;
   margin-bottom: 0;
+  scroll-margin-top: 80px;
 }
 
 .markdown h1 {
