--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -105,7 +105,7 @@ $content-image-max-height: 560px;
 .markdown kbd,
 .markdown pre {
   font-family: monospace, monospace;
-  font-size: 1em;
+  font-size: 12px !important;
 }
 
 .markdown hr {
@@ -139,7 +139,7 @@ $content-image-max-height: 560px;
 }
 
 .markdown a {
-  color: #0A87EF;
+  color: #0a87ef;
   text-decoration: none;
   // border-bottom: 0.05em solid;
   // border-color: var(--link-text-color);
@@ -159,7 +159,7 @@ $content-image-max-height: 560px;
   overflow: hidden;
   background: transparent;
   border: 0;
-  border-bottom: 1px solid #C4C4C4;
+  border-bottom: 1px solid #c4c4c4;
 }
 
 .markdown hr:after,
@@ -252,7 +252,7 @@ $content-image-max-height: 560px;
 .markdown p {
   margin-top: 0;
   margin-bottom: 10px;
-  line-height: 1.8
+  line-height: 1.8;
 }
 
 .markdown blockquote {
@@ -789,11 +789,10 @@ $content-image-max-height: 560px;
   font-weight: 600;
 }
 
-
 .markdown table td,
 .markdown table th {
   padding: 8px 13px;
-  border-bottom: 1px solid #E4E4E4;
+  border-bottom: 1px solid #e4e4e4;
 }
 
 // .markdown table tr {
