--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -155,7 +155,7 @@ $content-image-max-height: 560px;
 
 .markdown hr {
   height: 0;
-  margin: 15px 0;
+  margin: 16px 0;
   overflow: hidden;
   background: transparent;
   border: 0;
@@ -251,7 +251,7 @@ $content-image-max-height: 560px;
 
 .markdown p {
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 12px !important;
   line-height: 1.8;
 }
 
@@ -1067,7 +1067,7 @@ $content-image-max-height: 560px;
   justify-content: center !important;
   width: 100% !important;
   max-height: $content-image-max-height !important;
-  margin: 0 !important;
+  // margin: 0 !important;
 
   img {
     max-width: 100% !important;
